# base-vk-api

./: .gitignore  .pre-commit-config.yaml  README.md  base_vk_api.py  pyproject.toml  test_base_vk_api.py
.github/workflows/: publish.yml  test.yml
src/base_vk_api/: __init__.py
