[tool.poetry]
name = "base_vk_api"
version = "0.0.1"
description = "Base VK API client based on Pydantic models"
authors = ["Lev Vereshchagin <mail@vrslev.com>"]
repository = "https://github.com/vrslev/base-vk-api"
license = "MIT"
include = ["src/base_vk_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pydantic = "^1.8.2"
pytest = {version = "6.2.5", optional = true}
pytest-cov = {version = "3.0.0", optional = true}
pytest-randomly = {version = "3.10.3", optional = true}
responses = {version = "0.16.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pre-commit = "^2.15.0"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "pytest-randomly", "responses"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportPrivateUsage = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
]
