[tool.poetry]
name = "base_vk_api"
version = "0.0.1"
description = "Base VK API client based on Pydantic models"
authors = ["Lev Vereshchagin <mail@vrslev.com>"]
readme = "README.md"
repository = "https://github.com/vrslev/base-vk-api"
license = "MIT"
include = ["src/base_vk_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pre-commit = "^2.15.0"
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-randomly = "3.10.3"
responses = "0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry-version-plugin]
# source = "git-tag"

[tool.black]
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportPrivateUsage = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
]
